# claude-ci-agent

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  action.yml  architecture.drawio  compose.yaml  main.py  pyproject.toml  zensical.toml
.claude/commands/: build-image.md  check-pins.md  gitlab-debug.md  preflight.md  release.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-agent.yml  docs.yml  release.yml
addons/openbao/: README.md  fetch-secrets.sh
addons/team-routing/: README.md  collector-config.routing.yaml  collector-config.team.yaml
addons/team-routing/k8s/: otel-collector.team.yaml  render.sh
deploy/: agent-job.yaml  networkpolicy.yaml
deploy/helm/claude-ci-agent/: Chart.yaml  README.md  values-aks.yaml  values-ocp.yaml  values.yaml
deploy/helm/claude-ci-agent/templates/: NOTES.txt  _helpers.tpl  (+7 more)
docs/: architecture.md  ci-versions.md  getting-started.md  index.md  kubernetes.md  llm-gateway.md  local-stack.md  markdown.md  observability.md  secrets-openbao.md  spec-driven.md  team-routing.md  tooling.md  yolo-mode.md
docs/stylesheets/: tron.css
examples/gitlab/claude-ci-agent-test/: .gitlab-ci.yml  CLAUDE.MD  README.md
local/: kibana-dashboard.ndjson  kibana-setup.sh  make_dashboard.py
otel/: collector-config.local.yaml  emit_cost.py  otel-collector-config.yaml
templates/: README.md  claude-agent.yml
tests/: ci-local.sh  conftest.py  e2e.sh  test_config.py  test_emit_cost.py
(+1 files in other folders)
